# infrahub-demo-dc-fabric-develop

./: .gitignore  .infrahub.yml  README.md  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflow/: workflow-dependabot.yml
bootstrap/: create_location.py  generate_topology.py
checks/: check_device_topology.gql  check_device_topology.py
docs/: package-lock.json
generators/: create_basic.py  create_location.py  create_security_nodes.py  create_topology.py  generate_network-services.py  generate_topology.py  network_services.gql  network_services.py  schema_protocols.py  schema_protocols_sync.py  utils.py
models/: create_basic.py  create_location.py  create_topology.py  dcim.yml  generate_devices_from_topology.py  infrastructure.yml  infrastructure_base.yml  infrastructure_topology.yml  ipam.yml  routing.yml  security.yml  topology.yml
scripts/: create_demo_data.sh
templates/: device_arista_config.tpl.j2  device_cisco_config.tpl.j2  device_info.gql  juniper_srx_config.gql  juniper_srx_config.j2  topology_info_query.gql
tests/: test_graphql.yml  tests_all.yml
tests/device_arista/baseline/: input.json
tests/device_arista/missing_interfaces/: input.json  output.txt
transforms/: computed_link_description.py
