[tool.poetry]
name = "infrahub-demo-dc-fabric"
version = "0.1.0"
description = "Infrahub is taking a new approach to Infrastructure Management by providing a new generation of datastore to organize and control all the data that defines how an infrastructure should run."
authors = ["OpsMill <info@opsmill.com>"]
readme = "README.md"
homepage = "https://opsmill.com"
repository = "https://github.com/opsmill/infrahub"
documentation = "https://docs.infrahub.app/"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = "^3.10, < 3.13"
infrahub-sdk = {version = "0.12.0b1", extras = ["all"]}
invoke = "^2.2.0"
nornir-infrahub = "^0, >=0.2.2"
ansible-core = "2.17.1"
netaddr = "^1.3.0"
paramiko = "^3.4.0"
deepmerge = "^1.1.1"
cvprac = "^1.4.0"
md-toc = "^9.0.0"
treelib = "^1.7.0"
jsonschema = "4.22.0"
# anta = "^0.11.0"
pytest = "^8.2.2"
typer = "^0.12.3"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
